tests/ui/impl-trait/unsized_coercion3.old.stderr
error[E0277]: the size for values of type `impl Trait + ?Sized` cannot be known at compilation time
  --> $DIR/unsized_coercion3.rs:15:32
   |
LL |         let y: Box<dyn Send> = x;
   |                                ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `impl Trait + ?Sized`
   = note: required for the cast from `Box<impl Trait + ?Sized>` to `Box<dyn Send>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
